[gd_scene load_steps=4 format=3 uid="uid://bnyh57kfbrdht"]

[ext_resource type="Script" uid="uid://c6ilvy3igbhjv" path="res://main_menu.gd" id="1_fsbqx"]
[ext_resource type="PackedScene" uid="uid://cceu77cxmffox" path="res://Assets/Scenes/options_menu.tscn" id="2_cbhea"]
[ext_resource type="Texture2D" uid="uid://b46n2bwm8j4fc" path="res://Assets/Images/title.png" id="2_tanm1"]

[node name="CanvasGroup" type="CanvasGroup"]
script = ExtResource("1_fsbqx")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -1.0
offset_top = 3.0
offset_right = 641.0
offset_bottom = 356.0

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -47.0
offset_right = -5.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_tanm1")
expand_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.5
offset_top = -140.0
offset_right = 152.5
offset_bottom = 75.5
grow_horizontal = 2
grow_vertical = 2

[node name="AdventureCrawler" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 1
theme_override_colors/font_color = Color(0.87769634, 0.470311, 0.63783514, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 80
text = "Main Menu"
vertical_alignment = 1

[node name="Play" type="Button" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(100, 33)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
mouse_filter = 1
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 30
text = "Play"

[node name="Save Game" type="Button" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(100, 33)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
mouse_filter = 1
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 30
text = "Save
"

[node name="Options" type="Button" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(100, 33)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
mouse_filter = 1
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 30
text = "Options"

[node name="Quit" type="Button" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(100, 33)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
mouse_filter = 1
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_constants/h_separation = 4
theme_override_font_sizes/font_size = 30
text = "Quit"

[node name="Options_Menu" parent="." instance=ExtResource("2_cbhea")]
visible = false

[connection signal="pressed" from="Control/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Save Game" to="." method="_on_save_game_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
